- Fixes to survey html/css to deal with placing paragraphs outside scrollbars - Added disqualify page and api function

--- a/public/css/starbar-generic.css
+++ b/public/css/starbar-generic.css
@@ -1318,7 +1318,7 @@ bringing in elements from jquery-ui smoothness theme and overriding.sb_
 	font-size: 150%;
 	font-weight: bold;
 }
-#sayso-starbar-embed #sb-survey-completed {
+#sayso-starbar-embed #sb-survey-completed, #sayso-starbar-embed #sb-survey-disqualified {
 	display: none;
 	color: #000;
 }
